rust/foxglove/src/protocol/common/server/snapshots/foxglove__websocket__ws_protocol__server__playback_state__tests__encode_playing.snap
---
source: rust/foxglove/src/websocket/ws_protocol/server/playback_state.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x05,
    0x00,
    0x39,
    0x30,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
